--- a/web/internal/views/partials/nav.html
+++ b/web/internal/views/partials/nav.html
@@ -49,10 +49,6 @@
                                 <span>Imprimir</span>
                             </li>
                         </a>
-                        <li class="flex gap-3 rounded px-4 py-2 hover:bg-sky-900 active:scale-90 md:py-1">
-                            <svg class="translate-y-1 transform" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><path d="M0 64C0 28.7 28.7 0 64 0H224V128c0 17.7 14.3 32 32 32H384V285.7l-86.8 86.8c-10.3 10.3-17.5 23.1-21 37.2l-18.7 74.9c-2.3 9.2-1.8 18.8 1.3 27.5H64c-35.3 0-64-28.7-64-64V64zm384 64H256V0L384 128zM549.8 235.7l14.4 14.4c15.6 15.6 15.6 40.9 0 56.6l-29.4 29.4-71-71 29.4-29.4c15.6-15.6 40.9-15.6 56.6 0zM311.9 417L441.1 287.8l71 71L382.9 487.9c-4.1 4.1-9.2 7-14.9 8.4l-60.1 15c-5.5 1.4-11.2-.2-15.2-4.2s-5.6-9.7-4.2-15.2l15-60.1c1.4-5.6 4.3-10.8 8.4-14.9z"/></svg>
-                            <span>Modelos</span>
-                        </li>
                     </ul>
                 </li>
                 <a href="/metrics" class="icon-btn">
@@ -70,13 +66,15 @@
                 </a>
             {{ else }}
                 <a href="/register">
-                    <li class="cursor-pointer rounded px-4 py-1 hover:bg-sky-800 active:scale-90">
-                        <span>Cadastro</span>
+                    <li class="flex w-16 cursor-pointer flex-col items-center gap-1 rounded px-4 pt-1 hover:bg-sky-800 active:scale-90 md:w-auto md:flex-row md:items-start md:gap-3 md:py-1">
+                        <svg class="transform md:translate-y-1" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><path d="M64 32C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64H512c35.3 0 64-28.7 64-64V96c0-35.3-28.7-64-64-64H64zm80 256h64c44.2 0 80 35.8 80 80c0 8.8-7.2 16-16 16H80c-8.8 0-16-7.2-16-16c0-44.2 35.8-80 80-80zm-32-96a64 64 0 1 1 128 0 64 64 0 1 1 -128 0zm256-32H496c8.8 0 16 7.2 16 16s-7.2 16-16 16H368c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64H496c8.8 0 16 7.2 16 16s-7.2 16-16 16H368c-8.8 0-16-7.2-16-16s7.2-16 16-16zm0 64H496c8.8 0 16 7.2 16 16s-7.2 16-16 16H368c-8.8 0-16-7.2-16-16s7.2-16 16-16z"/></svg>
+                        <span class="text-xs md:text-base">Cadastro</span>
                     </li>
                 </a>
                 <a href="/login">
-                    <li class="cursor-pointer rounded px-4 py-1 hover:bg-sky-800 active:scale-90">
-                        <span>Entrar</span>
+                    <li class="flex w-16 cursor-pointer flex-col items-center gap-1 rounded px-4 pt-1 hover:bg-sky-800 active:scale-90 md:w-auto md:flex-row md:items-start md:gap-3 md:py-1">
+                        <svg class="transform md:translate-y-1" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><path d="M217.9 105.9L340.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L217.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1L32 320c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM352 416l64 0c17.7 0 32-14.3 32-32l0-256c0-17.7-14.3-32-32-32l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32l64 0c53 0 96 43 96 96l0 256c0 53-43 96-96 96l-64 0c-17.7 0-32-14.3-32-32s14.3-32 32-32z"/></svg>
+                        <span class="text-xs md:text-base">Entrar</span>
                     </li>
                 </a>
             {{ end }}
