--- a/web/internal/static/styles/custom.css
+++ b/web/internal/static/styles/custom.css
@@ -19,3 +19,19 @@
 .icon-btn.htmx-request .original-icon {
     display: none;
 }
+
+.w-1\/7 {
+    width: 50%;
+}
+
+@media (min-width: 640px) {
+    .w-1\/7 {
+        width: 25%;
+    }
+}
+
+@media (min-width: 1280px) {
+    .w-1\/7 {
+        width: 14.28%;
+    }
+}
