--- a/web/internal/views/partials/invoice-form.html
+++ b/web/internal/views/partials/invoice-form.html
@@ -70,10 +70,6 @@
                     <sub class="text-red-600">{{ .Invoice.Errors.IsIcmsContributor }}</sub>
                 </div>
 
-            </div>
-
-            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
-
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label class="truncate" for="is_final_customer"><strong>Consumidor Final</strong></label>
                     <select class="h-10 rounded bg-gray-100 p-2" id="is_final_customer" name="is_final_customer">
@@ -83,6 +79,10 @@
                     </select>
                     <sub class="text-red-600">{{ .Invoice.Errors.IsFinalCustomer }}</sub>
                 </div>
+
+            </div>
+
+            <div class="flex w-1/2 flex-col gap-4 md:w-full md:flex-1 md:flex-row">
 
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="shipping"><strong>Frete</strong></label>
@@ -105,6 +105,18 @@
                 <div class="flex flex-col gap-2 md:w-1/5">
                     <label for="gta"><strong>GTA</strong></label>
                     <input class="rounded bg-gray-100 p-2 md:w-full" type="text" id="gta" name="gta" value="{{ .Invoice.Gta }}">
+                    <sub class="text-red-600">{{ .Invoice.Errors.Gta }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="description"><strong>Informações complementares</strong></label>
+                    <input class="rounded bg-gray-100 p-2 md:w-full" type="text" id="description" name="description" value="{{ .Invoice.Gta }}">
+                    <sub class="text-red-600">{{ .Invoice.Errors.Gta }}</sub>
+                </div>
+
+                <div class="flex flex-col gap-2 md:w-1/5">
+                    <label class="truncate" for="file_name"><strong>Nome do arquivo</strong></label>
+                    <input class="rounded bg-gray-100 p-2 md:w-full" type="text" id="file_name" name="file_name" value="{{ .Invoice.Gta }}">
                     <sub class="text-red-600">{{ .Invoice.Errors.Gta }}</sub>
                 </div>
 
@@ -138,7 +150,7 @@
                     <span id="items-count"></span>
                 </div>
                 <div>
-                    <button class="rounded bg-gray-200 px-4 py-3 font-bold hover:bg-gray-300 active:bg-gray-400" type="button"
+                    <button id="expand-or-shrink-dialog-btn" class="rounded bg-gray-200 px-4 py-3 font-bold hover:bg-gray-300 active:bg-gray-400" type="button"
                         onclick="expandOrShrinkDialog('invoice-items-dialog', this)">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><path d="M32 32C14.3 32 0 46.3 0 64v96c0 17.7 14.3 32 32 32s32-14.3 32-32V96h64c17.7 0 32-14.3 32-32s-14.3-32-32-32H32zM64 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v96c0 17.7 14.3 32 32 32h96c17.7 0 32-14.3 32-32s-14.3-32-32-32H64V352zM320 32c-17.7 0-32 14.3-32 32s14.3 32 32 32h64v64c0 17.7 14.3 32 32 32s32-14.3 32-32V64c0-17.7-14.3-32-32-32H320zM448 352c0-17.7-14.3-32-32-32s-32 14.3-32 32v64H320c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V352z"/></svg>
                     </button>
