--- a/web/internal/views/partials/request-card-details.html
+++ b/web/internal/views/partials/request-card-details.html
@@ -56,46 +56,55 @@
                     <strong>GTA</strong>: <span> {{ if .Gta }} {{ .Gta }} {{ else }} - {{ end }} </span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
+                    <strong>Informações complementares</strong>: <span> {{ if .ExtraNotes }} {{ .ExtraNotes }} {{ else }} - {{ end }} </span>
+                </li>
+                <li class="sm:w-1/2 sm:pr-2">
+                    <strong>Nome do arquivo</strong>: <span> {{ if .CustomFileName }} {{ .CustomFileName }} {{ else }} - {{ end }} </span>
+                </li>
+                <li class="sm:w-1/2 sm:pl-2">
                     <strong>Quantidade de itens</strong>: <span> {{ len .Items }} </span>
                 </li>
             {{ else if eq $ReqCardData.OverviewType "canceling" }}
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Ano</strong>: <span> {{ .Year }} </span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Justificativa</strong>: <span> {{ .Justification }} </span>
                 </li>
             {{ else if eq $ReqCardData.OverviewType "metrics" }}
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Lucro total</strong>: <span class="text-green-600"> R$ {{ .Results.TotalIncome }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Lucro médio</strong>: <span class="text-green-600"> R$ {{ .Results.AvgIncome }}</span>
                 </li>
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Despesa total</strong>: <span class="text-red-600"> R$ {{ .Results.TotalExpenses }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Despesa média</strong>: <span class="text-red-600"> R$ {{ .Results.AvgExpenses }}</span>
                 </li>
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Diferença</strong>: <span class="text-{{ if .Results.IsPositive}}green{{ else }}red{{ end }}-600"> R$ {{ .Results.Diff }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Total de transações</strong>: <span> {{ .Results.TotalRecords }}</span>
                 </li>
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Vendas</strong>: <span> {{ .Results.PositiveRecords }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Compras</strong>: <span> {{ .Results.NegativeRecords }}</span>
                 </li>
             {{ else if eq $ReqCardData.OverviewType "printing" }}
-                <li class="sm:w-1/2 sm:pl-2">
+                <li class="sm:w-1/2 sm:pr-2">
                     <strong>Identificador</strong>: <span> {{ .InvoiceId }}</span>
                 </li>
                 <li class="sm:w-1/2 sm:pl-2">
                     <strong>Tipo de identificação</strong>: <span> {{ .InvoiceIdType }}</span>
+                </li>
+                <li class="sm:w-1/2">
+                    <strong>Nome do arquivo</strong>: <span> {{ if .CustomFileName }} {{ .CustomFileName }} {{ else }} - {{ end }} </span>
                 </li>
             {{ end }}
         </ul>
@@ -106,7 +115,7 @@
                 {{ range .Items }}
                     <ul class="flex flex-col gap-4 rounded border border-gray-400 p-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
                         <li class="sm:w-1/2 sm:pr-2">
-                            <strong>Grupo</strong>: <span> {{ .Group }} </span>
+                            <strong>Grupo / NCM</strong>: <span> {{ .Group }} / {{ .NCM }}</span>
                         </li>
                         <li class="sm:w-1/2 sm:pl-2">
                             <strong>Descrição</strong>: <span> {{ .Description }} </span>
@@ -120,7 +129,7 @@
                         <li class="sm:w-1/2 sm:pr-2">
                             <strong>Origem</strong>: <span> {{ .Origin }} </span>
                         </li>
-                        <li class="sm:w-1/2 sm:pl-2">
+                        <li class="sm:w-1/2">
                             <strong>Unidade de medida</strong>: <span> {{ .UnityOfMeasurement }} </span>
                         </li>
                     </ul>
