--- a/web/internal/views/invoices-cancel.html
+++ b/web/internal/views/invoices-cancel.html
@@ -5,5 +5,10 @@
 </section>
 
 <section class="pt-6" id="requests-overview-section">
+    <div class="flex flex-col justify-between md:flex-row">
+        <h3 class="text-xl font-semibold">Requerimentos</h3>
+
+    </div>
+
     {{ template "partials/requests-overview" .InvoiceCancelings }}
 </section>
