--- a/web/views/entities.html
+++ b/web/views/entities.html
@@ -8,7 +8,7 @@
                     <th class="flex-1 text-center">Nome</th>
                     <th class="flex-1 text-center">CPF/CNPJ</th>
                     <th class="hidden flex-1 text-center sm:block">IE</th>
-                    <th class="hidden flex-1 text-center sm:block">Bairro</th>
+                    <th class="hidden flex-1 text-center sm:block">Tipo</th>
                 </tr>
             </thead>
             {{ template "partials/entity-list" . }}
