--- a/web/views/partials/request-card-metrics-details.html
+++ b/web/views/partials/request-card-metrics-details.html
@@ -24,29 +24,15 @@
         </header>
 
         <ul id="monthly-metrics-results" class="hidden flex-col gap-4 px-4 py-4">
-            <li>
-                <h4 class="text-lg">Janeiro</h4>
-                <ul class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-                    {{ template "partials/request-card-metrics-results-details" . }}
-                </ul>
-                <hr>
-            </li>
-
-            <li>
-                <h4 class="text-lg">Fevereiro</h4>
-                <ul class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-                    {{ template "partials/request-card-metrics-results-details" . }}
-                </ul>
-                <hr>
-            </li>
-
-            <li>
-                <h4 class="text-lg">Março</h4>
-                <ul class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
-                    {{ template "partials/request-card-metrics-results-details" . }}
-                </ul>
-                <hr>
-            </li>
+            {{ range .Months }}
+                <li>
+                    <h4 class="text-lg">{{ .MonthName }}</h4>
+                    <ul class="flex flex-col gap-4 px-4 py-4 sm:flex-row sm:flex-wrap sm:gap-x-0">
+                        {{ template "partials/request-card-metrics-results-details" . }}
+                    </ul>
+                    <hr>
+                </li>
+            {{ end }}
         </ul>
     </section>
 {{ end }}
